--- a/content/static/css/_archive.scss
+++ b/content/static/css/_archive.scss
@@ -1,4 +1,5 @@
-.archive {  
+.archive {
+  padding-bottom: 40px;
   &-heading {
     height: 90px;
     line-height: 90px;
@@ -11,15 +12,115 @@
     }
   }
   .previous-editions {
-    ul {
+    display: flex;
+    margin: auto;
+    align-content: center;
+    width: 800px;
+    .events {
       display: flex;
-      flex-flow: column wrap;
-      height: 768px;
-      list-style: none;
-      li {
-        text-align: center;
-        padding: 15px;
+      flex-flow: row nowrap;
+      text-align: center;
+      flex: 1 1 25%;
+      .years {
+        flex: 1 1 10%;
+        background-color: $archive-bg-year;
+        .year {
+          padding: 0px 0 10px 0;
+          height: 20px;
+          padding: 20px;
+        }
+      }
+      .months {
+        flex: 1 1 10%;
+        background-color: $archive-bg-month;        
+        .event {
+          padding: 0px 0 10px 0;
+          height: 20px;
+          padding: 20px;
+          display: none;
+        }
+      }
+    }    
+    .content {
+      flex: 1 1 75%;
+      .speakers {
+        display: none;
+        padding: 20px;
+        background-color: $archive-bg-content;
+        .edition {
+          padding-top: 15px;
+          font-size:24px;
+          font-weight: bold;
+          text-align: center;
+          sup {
+            font-size: 18px;
+          }
+        }
+        .speaker-details {
+          display: flex;
+          border-top: 1px solid $black;
+          padding: 10px 0;
+          &:nth-child(2) {
+            border-top: none;
+          }
+          &:last-child {
+            padding-bottom: 25px;
+          }
+          .time {
+            flex: 1 1 10%;
+            align-self: flex-start;
+            padding-top: 5px;
+            font-weight: 800;
+            text-transform: uppercase;
+          }
+          .speaker-detail {
+            flex: 1 1 85%;
+            .img {
+              border-radius: 32px;
+              width: 32px;
+              height: 32px;
+              padding: 5px; 
+            }
+            .title {
+              color: $pink;
+              font-size: 20px;
+              font-weight: bold;
+              display: block;            
+            }          
+            .title-default {
+              color: $black;
+              font-size: 20px;
+              font-weight: bold;
+            }
+            .subtitle {
+              display: block;
+              color: $gray;                          
+              font-size: 15px;            
+              font-style: italic;
+              text-align: justify;
+              padding: 0 0 10px 0;
+            }
+            .name {
+              color: $pink;
+              font-size: 15px;
+              font-weight: bold;
+              display: flex;
+              align-items: center;
+              justify-content: flex-start;
+            }
+          }
+        }
       }
     }
-  }  
+    .speakers.active{
+      display: block;
+    }
+    .events .year.active {
+      background-color: $archive-active;
+    }
+    .events  .event.active{
+      display: block;
+      background-color: $archive-active;
+    }
+  }
 }
