--- a/content/static/css/_variables.scss
+++ b/content/static/css/_variables.scss
@@ -8,6 +8,11 @@ $seafoam-blue: #80c9d2;
 $nice-blue: #1a73ba;
 $section-heading-background: #dfdfdf;
 $gray: #4a4a4a;
+$archive-bg-year: #f5f5f5;
+$archive-bg-month: #f1f1f1;
+$archive-bg-content: #ededed;
+$archive-active: rgba(255, 255, 255, 0.8);
+
 
 //Images
 $tw-logo: url("/img/tw-logo-white.svg");
