--- a/content/static/css/_variables.scss
+++ b/content/static/css/_variables.scss
@@ -19,3 +19,4 @@ $tw-logo: url("/img/tw-logo-white.svg");
 $geeknight-logo: url("/img/geek_night_logo.svg");
 $direction-img: url("/img/direction.svg");
 $intro-background: url("/img/intro_background.jpg");
+$youtube-logo: url("/img/youtube-logo.svg");
