--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -78,7 +78,7 @@ html {
     .intro .banner-overlay {
       background-color: rgba(255, 255, 255, 0.8);
       margin: auto;
-      height: 320px;
+      height: 350px;
       max-width: 600px;
       position: absolute;
       top: -100px;
@@ -116,7 +116,6 @@ html {
       .intro-info-edition sup {
         font-size: 18px; }
     .intro-info-date {
-      padding-top: 10px;
       font-size: 18px;
       font-weight: bold;
       padding-bottom: 20px; }
@@ -142,7 +141,17 @@ html {
         .intro-info-buttons-button-sub-text {
           color: #000;
           font-style: italic;
-          font-size: 14px; }
+          font-size: 14px;
+          padding: 5px; }
+    .intro-info-subnote {
+      padding: 10px; }
+      .intro-info-subnote .youtube {
+        background: url("/img/youtube-logo.svg") center no-repeat;
+        background-size: 70px;
+        display: inline-block;
+        height: 50px;
+        width: 100px;
+        transform: translate(-10px, 20px); }
 
 .agenda-heading {
   height: 90px;
