--- a/layouts/_archive_section.html.erb
+++ b/layouts/_archive_section.html.erb
@@ -3,21 +3,26 @@
     <div class="previous-editions">
         <div class="events">
             <div class="years">
-                <% toMap.each do |year, events| %>
-                    <div class="year <%= "active" if events.first == toMap.values.first[0] %>"> <%= year[0] %></div>
+                <% getEvents.each do |year, events| %>
+                    <div id="year-<%= year[0] %>"
+                        class="year <%= "active" if events.first == getEvents.values.first[0] %>"
+                        onclick="getEventsFor(this.id, this.textContent)"><%= year[0] %></div>
                 <% end %>
             </div>
             <div class="months">
-                <% toMap.each do |year, events| %>
+                <% getEvents.each do |year, events| %>
                     <% events.each do |month| %>
-                        <div class="event <%= "active" if events.first == toMap.values.first[0] %>"><%= month %></div>
+                        <div id="<%= year[0] %>"
+                            class="event <%= "show" if events.first == getEvents.values.first[0] %>"
+                            onclick="getAgenda(event, this.id, this.textContent)"><%= month %>
+                        </div>
                     <%end%>
                 <% end %>
             </div>
         </div>
         <div class="content">
             <% archives.each do |archive| %>
-              <div id="<%= archive[:start].to_date.strftime("%Y-%b-%d") %>" class="speakers <%= "active" if archives.first == archive %>">
+              <div id="<%= archive[:start].to_date.strftime("%Y-%b %d") %>" class="speakers <%= "active" if archives.first == archive %>">
                 <div class="edition"><%= archive[:edition] %><sup><%= archive[:edition].ordinal %></sup> Edition</p></div>
                 <% archive[:agenda] && archive[:agenda].each_with_index do |agenda, i| %>
                   <div class="speaker-details">
