--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -71,44 +71,46 @@ html {
   position: relative;
   display: flex;
   flex-flow: column;
-  min-height: 800px;
-  text-align: center; }
+  min-height: 500px;
+  text-align: center;
+  padding-top: 100px; }
   .intro .banner {
     flex: 1 1 60%;
     background: url("/img/intro_background.jpg") center center no-repeat;
     background-size: 100%; }
     .intro .banner-overlay {
-      background-color: rgba(255, 255, 255, 0.8);
       margin: auto;
       height: 350px;
-      max-width: 600px;
+      width: 530px;
       position: absolute;
-      top: -100px;
+      top: 100px;
       bottom: 0;
       right: 0;
       left: 0; }
-  .intro-text {
-    flex: 0 1 10%;
-    background-color: #80c9d2;
-    font-size: 34px;
-    font-weight: 600;
-    padding: 5% 5% 0 5%; }
-    .intro-text .read-more {
-      color: #ef5ba1; }
-    .intro-text .read-more::after {
-      content: "More";
-      cursor: pointer;
-      text-decoration: underline; }
-    .intro-text #toggle:checked ~ label::after {
-      content: "Less"; }
+    .intro .banner .mask {
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      position: absolute;
+      overflow: hidden; }
+      .intro .banner .mask .blur {
+        position: absolute;
+        background-color: rgba(255, 255, 255, 0.5);
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        filter: blur(2px); }
   .intro-info {
-    display: flex;
-    flex-flow: column nowrap;
-    height: 100%; }
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0; }
     .intro-info-place-title {
       font-size: 33px;
       font-weight: 800;
-      border-bottom: 2px solid #4a4a4a;
       margin: 0 70px;
       padding-top: 26px; }
     .intro-info-edition {
@@ -125,14 +127,14 @@ html {
         font-size: 14px; }
     .intro-info-buttons {
       display: flex;
-      justify-content: center; }
+      flex-flow: row nowrap;
+      justify-content: space-around; }
       .intro-info-buttons-button {
         border-radius: 4px;
         border: 1px solid transparent;
         width: 220px;
-        height: 60px;
         cursor: pointer;
-        margin-left: 30px; }
+        padding-bottom: 20px; }
         .intro-info-buttons-button-text {
           height: 60px;
           font-size: 24px;
@@ -146,14 +148,16 @@ html {
           font-size: 14px;
           padding: 5px; }
     .intro-info-subnote {
-      padding: 10px; }
+      display: flex;
+      justify-content: center;
+      padding: 20px; }
       .intro-info-subnote .youtube {
         background: url("/img/youtube-logo.svg") center no-repeat;
         background-size: 70px;
-        display: inline-block;
-        height: 50px;
-        width: 100px;
-        transform: translate(-10px, 20px); }
+        flex: 0 1 20%; }
+  .intro .line {
+    border-top: 1px solid;
+    margin: 0 50px; }
 
 .agenda-heading {
   height: 90px;
