--- a/layouts/_header_section.html.erb
+++ b/layouts/_header_section.html.erb
@@ -5,7 +5,7 @@
                 <div class="logo"></div>
             </a>
         </div>
-        <div class="menu">
+        <div id="menu" class="menu">
             <div class="menu-item"><a href="#agenda">Agenda</a></div>
             <div class="menu-item"><a href="#location">Location</a></div>
             <div class="menu-item"><a href="#archive">All Editions</a></div>
