--- a/content/static/css/_header.scss
+++ b/content/static/css/_header.scss
@@ -10,6 +10,10 @@
   a {
     text-decoration: none;
     color: $pink;
+    -webkit-transition: .5s all ease-out;
+    -moz-transition: .5s all ease-out;
+    transition: .5s all ease-out;
+    animation: all;
   }
   .nav-bar {
     width: 960px;
@@ -38,6 +42,12 @@
         flex: 1 1 20%;
         white-space: nowrap;
         text-align: center;
+      }
+      .active {
+        a {
+          border-bottom: 5px solid $pink;
+          padding-bottom: 5px;
+        }
       }
     }
   }
