--- a/content/static/css/_about.scss
+++ b/content/static/css/_about.scss
@@ -1,16 +1,17 @@
 #about {
+  padding-top: 40px;
   p {
-    padding: 5px 0;
+    padding: 20px 0;
     margin: 0;
     &:last-child {
       padding-bottom: 50px;
     }
   }
-  background-color: #dfdfdf;
   .about-heading {
     height: 90px;
     line-height: 90px;
     text-align: center;
+    background-color: $section-heading-background;
     &-text {
       font-size: 36px;
       font-weight: 800;
@@ -21,7 +22,8 @@
 
   .about-details {
     font-size: 18px;
-    margin: 0 180px;
+    padding: 0 180px;
     text-align: justify;
+    background-color: $section-heading-background;
   }
 }
