[Viky] Feedback from nadeem on fonts and layouts

--- a/layouts/_archive_section.html.erb
+++ b/layouts/_archive_section.html.erb
@@ -1,5 +1,5 @@
 <section id="archive" class="archive">
-    <div class="archive-heading"><div class="archive-heading-text">Previous Editions</div></div>
+    <div class="archive-heading"><div class="archive-heading-text">All Editions</div></div>
     <div class="previous-editions">
         <div class="events">
             <div class="years">
