--- a/content/static/css/_archive.scss
+++ b/content/static/css/_archive.scss
@@ -94,7 +94,7 @@
               border-radius: 32px;
               width: 32px;
               height: 32px;
-              padding: 5px; 
+              padding: 5px 5px 5px 0;
             }
             .title {
               color: $pink;
