--- a/content/static/css/_footer.scss
+++ b/content/static/css/_footer.scss
@@ -16,7 +16,7 @@
   .logo-section {
     display: flex;
     flex: 1 1 50%;
-    justify-content: flex-end;
+    justify-content: center;
     margin-top: 10px;
     .sponsored-by {
       color: $white;
@@ -30,18 +30,6 @@
       width: 140px;
       margin-left: 5px;
       margin-top: 3px;
-    }
-  }
-  .feedback-section {
-    flex: 1 1 50%;
-    font-size: 18px;
-    font-weight: 100;
-    &:before {
-      content: '|';
-      color: $white;
-      height: 10px;
-      width: 1px;
-      margin: 0 5px 0 5px;
     }
   }
 }
