--- a/content/static/css/_intro.scss
+++ b/content/static/css/_intro.scss
@@ -12,8 +12,8 @@
 
     &-overlay {
       margin: auto;
-      height: 350px;
-      width: 530px;
+      height: 360px;
+      width: 620px;
       position: absolute;
       top: 100px;
       bottom: 0;
@@ -29,7 +29,7 @@
       overflow: hidden;
       .blur {
         position: absolute;
-        background-color: rgba(255, 255, 255, .5);
+        background-color: rgba(255, 255, 255, .8);
         left: 0;
         right: 0;
         top: 0;
@@ -51,44 +51,45 @@
         font-size: 33px;
         font-weight: 800;
         margin: 0 70px;
-        padding-top: 26px;
+        padding-top: 20px;
       }
     }
 
     &-edition {
       padding-top: 15px;
-      font-size:24px;
+      font-size: 18px;
       font-weight: bold;
       sup {
-        font-size: 18px;
+        font-size: 14px;
       }
     }
 
     &-date {
-      font-size: 18px;
+      font-size: 24px;
       font-weight: bold;
       padding-bottom: 20px;
       sup {
-        font-size: 14px;
+        font-size: 18px;
       }
     }
 
     &-buttons {
       display: flex;
       flex-flow: row nowrap;
-      justify-content: space-around;
+      justify-content: center;
 
       &-button {
         border-radius: 4px;
         border: 1px solid transparent;        
         width: 220px;
         cursor: pointer;
-        padding-bottom: 20px;
+        padding: 0 20px 20px 20px;
 
         &-text {
           height: 60px;
           font-size: 24px;
-          line-height: 58px;
+          font-weight: bold;
+          line-height: 60px;
           border-radius: 4px;
           background-color: $nice-blue;
           color: $white;
