--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -87,8 +87,8 @@ html {
     background-size: 100%; }
     .intro .banner-overlay {
       margin: auto;
-      height: 350px;
-      width: 530px;
+      height: 360px;
+      width: 620px;
       position: absolute;
       top: 100px;
       bottom: 0;
@@ -103,7 +103,7 @@ html {
       overflow: hidden; }
       .intro .banner .mask .blur {
         position: absolute;
-        background-color: rgba(255, 255, 255, 0.5);
+        background-color: rgba(255, 255, 255, 0.8);
         left: 0;
         right: 0;
         top: 0;
@@ -119,33 +119,34 @@ html {
       font-size: 33px;
       font-weight: 800;
       margin: 0 70px;
-      padding-top: 26px; }
+      padding-top: 20px; }
     .intro-info-edition {
       padding-top: 15px;
-      font-size: 24px;
+      font-size: 18px;
       font-weight: bold; }
       .intro-info-edition sup {
-        font-size: 18px; }
+        font-size: 14px; }
     .intro-info-date {
-      font-size: 18px;
+      font-size: 24px;
       font-weight: bold;
       padding-bottom: 20px; }
       .intro-info-date sup {
-        font-size: 14px; }
+        font-size: 18px; }
     .intro-info-buttons {
       display: flex;
       flex-flow: row nowrap;
-      justify-content: space-around; }
+      justify-content: center; }
       .intro-info-buttons-button {
         border-radius: 4px;
         border: 1px solid transparent;
         width: 220px;
         cursor: pointer;
-        padding-bottom: 20px; }
+        padding: 0 20px 20px 20px; }
         .intro-info-buttons-button-text {
           height: 60px;
           font-size: 24px;
-          line-height: 58px;
+          font-weight: bold;
+          line-height: 60px;
           border-radius: 4px;
           background-color: #1a73ba;
           color: #FFF; }
@@ -203,7 +204,7 @@ html {
           border-radius: 32px;
           width: 32px;
           height: 32px;
-          padding: 5px; }
+          padding: 5px 5px 5px 0; }
         .agenda .content .speakers .speaker-details .speaker-detail .title {
           color: #ef5ba1;
           font-size: 20px;
@@ -356,7 +357,7 @@ html {
             border-radius: 32px;
             width: 32px;
             height: 32px;
-            padding: 5px; }
+            padding: 5px 5px 5px 0; }
           .archive .previous-editions .content .speakers .speaker-details .speaker-detail .title {
             color: #ef5ba1;
             font-size: 20px;
@@ -421,7 +422,7 @@ html {
   .footer .logo-section {
     display: flex;
     flex: 1 1 50%;
-    justify-content: flex-end;
+    justify-content: center;
     margin-top: 10px; }
     .footer .logo-section .sponsored-by {
       color: #FFF;
@@ -434,13 +435,3 @@ html {
       width: 140px;
       margin-left: 5px;
       margin-top: 3px; }
-  .footer .feedback-section {
-    flex: 1 1 50%;
-    font-size: 18px;
-    font-weight: 100; }
-    .footer .feedback-section:before {
-      content: '|';
-      color: #FFF;
-      height: 10px;
-      width: 1px;
-      margin: 0 5px 0 5px; }
