--- a/content/static/css/_variables.scss
+++ b/content/static/css/_variables.scss
@@ -2,7 +2,7 @@
 
 //Colors
 $pink: #ef5ba1;
-$white: #FFF;
+$white: #ffffffeb;
 $black: #000;
 $seafoam-blue: #80c9d2;
 $nice-blue: #1a73ba;
@@ -12,7 +12,6 @@ $archive-bg-year: #f5f5f5;
 $archive-bg-month: #f1f1f1;
 $archive-bg-content: #ededed;
 $archive-active: rgba(255, 255, 255, 0.8);
-
 
 //Images
 $tw-logo: url("../img/tw-logo-white.svg");
