--- a/content/static/css/app.sass
+++ b/content/static/css/app.sass
@@ -3,7 +3,8 @@
 html
   width: 100%
   height: 100%
-  overflow: auto  
+  min-width: 1024px
+  overflow: auto
   font-family: 'OpenSans', sans-serif
   body
     position: relative
