--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -1,6 +1,7 @@
 html {
   width: 100%;
   height: 100%;
+  min-width: 1024px;
   overflow: auto;
   font-family: "OpenSans", sans-serif; }
   html body {
@@ -27,29 +28,28 @@ html {
   text-decoration: underline; }
 
 .header {
-  background: #FFF;
+  background: #ffffffeb;
   position: fixed;
   height: 100px;
   width: 100%;
-  left: 0;
-  top: 0;
+  z-index: 999;
   padding: 0;
-  z-index: 999; }
+  top: 0;
+  left: 0;
+  right: 0; }
   .header a {
     text-decoration: none;
     color: #ef5ba1;
-    -webkit-transition: .5s all ease-out;
-    -moz-transition: .5s all ease-out;
-    transition: .5s all ease-out;
-    animation: all; }
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    transition: all .5s ease; }
   .header .nav-bar {
     width: 960px;
     display: flex;
     position: relative;
     top: 15px;
     bottom: 15px;
-    margin: auto;
-    opacity: 0.85; }
+    margin: auto; }
     .header .nav-bar .logo-section {
       display: flex;
       flex: 1 1 50%; }
@@ -62,11 +62,9 @@ html {
     .header .nav-bar .menu {
       display: flex;
       align-items: center;
-      flex: 1 1 30%; }
+      flex: 1 1 40%; }
       .header .nav-bar .menu-item {
-        flex: 1 1 20%;
-        white-space: nowrap;
-        text-align: center; }
+        flex: 1 1 25%; }
       .header .nav-bar .menu .active a {
         border-bottom: 5px solid #ef5ba1;
         padding-bottom: 5px; }
@@ -149,7 +147,7 @@ html {
           line-height: 60px;
           border-radius: 4px;
           background-color: #1a73ba;
-          color: #FFF; }
+          color: #ffffffeb; }
         .intro-info-buttons-button-sub-text {
           color: #000;
           font-style: italic;
@@ -231,13 +229,11 @@ html {
 
 .location {
   position: relative; }
-  .location .live-map-container {
-    margin: -5px; }
-    .location .live-map-container .live-map {
-      height: 500px;
-      width: 100%;
-      border: 0;
-      padding: 0; }
+  .location .live-map-container .live-map {
+    height: 500px;
+    width: 100%;
+    border: 0;
+    padding: 0; }
   .location .map {
     position: absolute;
     height: 180px;
@@ -418,14 +414,14 @@ html {
   align-items: center; }
   .footer a {
     text-decoration: none;
-    color: #FFF; }
+    color: #ffffffeb; }
   .footer .logo-section {
     display: flex;
     flex: 1 1 50%;
     justify-content: center;
     margin-top: 10px; }
     .footer .logo-section .sponsored-by {
-      color: #FFF;
+      color: #ffffffeb;
       font-size: 14px;
       font-weight: 100; }
     .footer .logo-section .logo {
