[Viky] Fix for header and scroll

--- a/content/static/css/_variables.scss
+++ b/content/static/css/_variables.scss
@@ -2,7 +2,8 @@
 
 //Colors
 $pink: #ef5ba1;
-$white: #ffffffeb;
+$white: #fff;
+$white-90-percent-opacity: rgba(255, 255, 255, 0.90);
 $black: #000;
 $seafoam-blue: #80c9d2;
 $nice-blue: #1a73ba;
