--- a/content/static/css/app.sass
+++ b/content/static/css/app.sass
@@ -14,17 +14,22 @@ html
     color: $pink
     text-decoration: none
 
-#toggle
+.read-more
+  color: $pink
+
+.read-more::after
+  content: "Show More"
+  cursor: pointer
+  text-decoration: underline
+  font-size: 18px
+  font-weight: 700
+
+.toggle:checked ~ label::after
+  content: "Show Less"
+
+.toggle
   display: none
   visibility: hidden
-
-#expand
-  height: 0
-  overflow: hidden
-  transition: height 0.5s
-
-#toggle:checked ~ #expand
-  height: 285px
 
 .link
   text-decoration: underline
