--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -12,17 +12,22 @@ html {
     color: #ef5ba1;
     text-decoration: none; }
 
-#toggle {
+.read-more {
+  color: #ef5ba1; }
+
+.read-more::after {
+  content: "Show More";
+  cursor: pointer;
+  text-decoration: underline;
+  font-size: 18px;
+  font-weight: 700; }
+
+.toggle:checked ~ label::after {
+  content: "Show Less"; }
+
+.toggle {
   display: none;
   visibility: hidden; }
-
-#expand {
-  height: 0;
-  overflow: hidden;
-  transition: height 0.5s; }
-
-#toggle:checked ~ #expand {
-  height: 285px; }
 
 .link {
   text-decoration: underline; }
@@ -369,7 +374,13 @@ html {
             font-size: 15px;
             font-style: italic;
             text-align: justify;
-            padding: 0 0 10px 0; }
+            padding: 0 0 10px 0;
+            height: 160px;
+            overflow: hidden;
+            transition: height .5s; }
+          .archive .previous-editions .content .speakers .speaker-details .speaker-detail .show {
+            height: auto;
+            transition: height .5s; }
           .archive .previous-editions .content .speakers .speaker-details .speaker-detail .name {
             color: #ef5ba1;
             font-size: 15px;
